--- a/locations/templates/locations/location_detail.html
+++ b/locations/templates/locations/location_detail.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% load locations_extras %}
-{% load static from staticfiles %}
+{% load static %}
 
 
 {% block title %}Locations | {{ block.super }}{% endblock %}
